--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE")
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
 
 jar {
     baseName = 'eAdapter'
@@ -23,9 +25,12 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
-    compile group: 'com.google.guava', name: 'guava', version: '20.0'
-    compile group: 'org.springframework', name: 'spring-core', version: '4.3.4.RELEASE'
+    compile("org.apache.commons:commons-lang3:3.5")
+    compile("com.google.guava:guava:20.0")
+    
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-jetty")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile("junit:junit")
 }
