--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.apache.commons:commons-lang3:3.5")
     compile("com.google.guava:guava:20.0")
-    
+    compile("org.apache.commons:commons-csv:1.1")
+
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-jetty")
     compile("org.springframework.boot:spring-boot-starter-actuator")
