--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,15 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.apache.commons:commons-lang3:3.5")
-    compile("com.google.guava:guava:20.0")
-    compile("org.apache.commons:commons-csv:1.1")
+    compile group: 'com.google.guava', name: 'guava', version: '20.0'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.1'
 
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-jetty")
     compile("org.springframework.boot:spring-boot-starter-actuator")
 
-    testCompile("junit:junit")
+    testCompile group: 'junit', name: 'junit'
+    testCompile group: 'org.mockito', name: 'mockito-core'
+
 }
